# tsdm

./: CHANGELOG.md  pyproject.toml  readme.md
examples/: AllocationTask_Basics.ipynb  ExecutionTask_Basics.ipynb  PredictionTask_Basics.ipynb
test/: __init__.py  test_agents.py  test_tasks.py
tsdm/: __init__.py  agents.py  games.py  tasks.py
tsdm.egg-info/: PKG-INFO  SOURCES.txt
tsdm/tsdm.egg-info/: PKG-INFO  SOURCES.txt
tsdm_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
